--- a/style.css
+++ b/style.css
@@ -79,3 +79,7 @@ h1{
     background-color: rgb(40, 40, 194);
     color:rgb(255, 255, 255)
   }
+
+  input[type=submit]:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
