--- a/style.css
+++ b/style.css
@@ -83,3 +83,8 @@ h1{
   input[type=submit]:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
+
+  input[type=submit]:active {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: rgb(33, 33, 157);
+  }
