--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
   }
   
 h1{
+    margin: 0px;
     font-family: 'Bowlby One SC', cursive;
     font-size:3em;
 }
@@ -53,7 +54,7 @@ h1{
     align-items: center;
     justify-content: center;
     gap: 10px 10px;
-    padding: 0px 30px 30px 20px;
+    margin: 20px 30px 30px 20px;
     
     /* border: 1px solid green; */
   }
