--- a/style.css
+++ b/style.css
@@ -19,10 +19,11 @@ h1{
 
     height: 100vh;
     width: 100vw;
-    /* background-color: #e3e3e3; */
-    background-image: url("fortnite2.jpg");
+    background-color: #e3e3e3;
+    /* background-image: url("fortnite2.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    */
   }
   
   /*Login UI Card centered on webpage*/
