--- a/style.css
+++ b/style.css
@@ -1,92 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-
-html, body {
-    margin: 0px;
-  }
-  
-h1{
-    margin: 0px;
-    font-family: 'Bowlby One SC', cursive;
-    font-size:3em;
+:root {
+  --main-font: 'IBM Plex Sans', sans-serif;
 }
 
-  /*Container that surrounds entire web page*/
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+html,
+body {
+  margin: 0px;
+}
 
-    height: 100vh;
-    width: 100vw;
-    background-color: #e3e3e3;
-    /* background-image: url("fortnite2.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    */
-  }
-  
-  /*Login UI Card centered on webpage*/
-  .card {
-    display: flex;
-    flex-direction: column;
-    align-items:center;
+h1 {
+  margin: 0px;
+  font-family: var(--main-font);
+  font-size: 3em;
+}
 
-    /*
-    border-style: solid;
-    border-color: rgba(255,255,255);
-    border-width: 4px;
-    */
+/*Container that surrounds entire web page*/
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    border-radius: 12px;
-    min-width: 30%;
-    min-height: 20%;
-    box-shadow: 0px 0px 31px 6px rgba(0,0,0,0.58);
-    background-color: #ffffff;
-  }
-  
+  height: 100vh;
+  width: 100vw;
+  background-color: #e3e3e3;
 
-  /*Forms for Username, Password, and Submit Button*/
-  form{
-    min-width:40%;
+  /* background-image: url("fortnite2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; */
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px 10px;
-    margin: 20px 30px 30px 20px;
-    
-    /* border: 1px solid green; */
-  }
+}
 
-  input{
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  input[type=text], input[type=password]{
-    align-self:stretch;    
-    padding: 0.5em;
-    border: 0;
-    outline: 0;
-    border-bottom: 1px solid rgb(105, 105, 105);
-  }
-  
-  input[type=submit]{
-    padding: 0.3em;
-    width:50%;
-    height:30px;
-    border:0;
-    border-radius: 4px;
-    background-color: rgb(40, 40, 194);
-    color:rgb(255, 255, 255)
-  }
+/*Login UI Card centered on webpage*/
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  input[type=submit]:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  }
 
-  input[type=submit]:active {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: rgb(33, 33, 157);
-  }
+  /* border-style: solid;
+  border-color: rgba(255, 255, 255);
+  border-width: 4px; */
+
+  /* Card Outline with Box Shadow */
+  border-radius: 12px;
+  min-width: 30%;
+  min-height: 20%;
+  box-shadow: 0px 0px 31px 6px rgba(0, 0, 0, 0.58);
+  background-color: #ffffff;
+}
+
+
+/*Forms for Username, Password, and Submit Button*/
+form {
+  min-width: 40%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px 10px;
+  margin: 20px 30px 30px 20px;
+
+  /* border: 1px solid green; */
+}
+
+input {
+  font-family: var(--main-font);
+}
+
+input[type=text],
+input[type=password] {
+  align-self: stretch;
+  padding: 0.5em;
+  border: 0;
+  outline: 0;
+  border-bottom: 1px solid rgb(105, 105, 105);
+}
+
+input[type=submit] {
+  padding: 0.3em;
+  width: 50%;
+  height: 30px;
+  border: 0;
+  border-radius: 4px;
+  background-color: rgb(40, 40, 194);
+  color: rgb(255, 255, 255)
+}
+
+input[type=submit]:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+input[type=submit]:active {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgb(33, 33, 157);
+}
