--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* 
+Author: David Bergstrom
+Last Updated: 6-21-22
+ */
+
+
 :root {
   --main-font: 'DM Sans', sans-serif;
 }
@@ -39,11 +45,6 @@ h1 {
   justify-content: center;
   align-items: center;
 
-
-  /* border-style: solid;
-  border-color: rgba(255, 255, 255);
-  border-width: 4px; */
-
   /* Card Outline with Box Shadow */
   border-radius: 12px;
   min-width: 20%;
@@ -55,24 +56,22 @@ h1 {
 
 /*Forms for Username, Password, and Submit Button*/
 form {
-  /* min-width: 40%; */
-
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  gap: 10px 10px;
-  margin: 30px 20px 30px 20px;
+  align-items: center;
 
-  /* border: 1px solid green; */
+  gap: 10px 10px;
+  width: 80%;
+  margin: 30px 30px 30px 30px;
+
 }
 
 input {
   font-family: var(--main-font);
 }
 
-input[type=text],
-input[type=password] {
+input[type=text], input[type=password] {
   align-self: stretch;
   padding: 0.5em;
   border: 0;
